# llmops-deep-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: agent_runtime.py  main.py  observability.py  settings.py
core/: agent.py  backends.py  tools.py
evals/: conftest.py  dataset.py  groq_judge.py  judge.py  test_agent_quality.py
frontend/: Dockerfile  app.py  requirements.txt
helm/deep-agent/: Chart.yaml  values.yaml
helm/deep-agent/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  service.yaml
k8s/: kind-config.yaml
tests/: conftest.py  test_api.py
