[project]
name = "llmops-deep-agent"
version = "0.1.0"
description = "Deep agent (deepagents + LangGraph) served with FastAPI, traced with Langfuse, eval-gated with DeepEval, deployed on Kubernetes"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
